@@ -1,22 +1,28 @@
 package io.lematech.httprunner4j.widget.utils;
 
+import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.map.MapUtil;
-import cn.hutool.core.util.StrUtil;
 import com.alibaba.fastjson.JSON;
-import io.lematech.httprunner4j.widget.i18n.I18NFactory;
+import com.alibaba.fastjson.JSONObject;
 import io.lematech.httprunner4j.common.Constant;
+import io.lematech.httprunner4j.common.DefinedException;
 import io.lematech.httprunner4j.entity.http.HttpConstant;
 import io.lematech.httprunner4j.entity.http.RequestEntity;
+import io.lematech.httprunner4j.entity.http.RequestParameterEntity;
 import io.lematech.httprunner4j.entity.http.ResponseEntity;
-import io.lematech.httprunner4j.common.DefinedException;
+import io.lematech.httprunner4j.widget.i18n.I18NFactory;
 import io.lematech.httprunner4j.widget.log.MyLog;
 import org.apache.http.*;
 import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.CookieStore;
 import org.apache.http.client.config.RequestConfig;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.*;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.client.methods.HttpPut;
 import org.apache.http.cookie.Cookie;
+import org.apache.http.entity.ContentType;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.BasicCookieStore;
 import org.apache.http.impl.client.CloseableHttpClient;
@@ -26,8 +32,9 @@ import org.apache.http.util.EntityUtils;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.net.URI;
 import java.net.URLEncoder;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 /**
@@ -44,34 +51,35 @@ public class HttpClientUtil {
     }
 
     public static ResponseEntity doGet(String url, Map<String, String> headers) {
-        return doGet(url, headers, Collections.EMPTY_MAP);
+        return doGet(url, headers, new RequestParameterEntity());
     }
 
-    public static ResponseEntity doGet(String url, Map<String, String> headers, Map<String, Object> params) {
+    public static ResponseEntity doGet(String url, Map<String, String> headers, RequestParameterEntity requestParams) {
         RequestConfig requestConfig = RequestConfig.custom()
                 .setConnectTimeout(HttpConstant.CONNECT_TIME_OUT)
                 .setSocketTimeout(HttpConstant.SOCKET_TIME_OUT)
                 .build();
-        return doGet(url, headers, params, requestConfig);
+        return doGet(url, headers, requestParams, requestConfig);
     }
 
-    public static ResponseEntity doGet(String url, Map<String, String> headers, Map<String, Object> params, RequestConfig requestConfig) {
-        return doGet(url, headers, params, new BasicCookieStore(), requestConfig);
+    public static ResponseEntity doGet(String url, Map<String, String> headers, RequestParameterEntity requestParams, RequestConfig requestConfig) {
+        return doGet(url, headers, requestParams, new BasicCookieStore(), requestConfig);
     }
 
-    public static ResponseEntity doGet(String url, Map<String, String> headers, Map<String, Object> params, CookieStore httpCookieStore, RequestConfig requestConfig) {
+    public static ResponseEntity doGet(String url, Map<String, String> headers, RequestParameterEntity requestParams, CookieStore httpCookieStore, RequestConfig requestConfig) {
         CloseableHttpClient httpClient = HttpClients
                 .custom()
                 .setDefaultCookieStore(Optional.ofNullable(httpCookieStore).orElse(httpCookieStore = new BasicCookieStore()))
                 .build();
-        String apiUrl = getUrlWithParams(url, params);
-        HttpGet httpGet = new HttpGet(apiUrl);
+        String apiUrl = getUrlWithParams(url, requestParams.getParams());
+        HttpGetWithEntity httpGet = new HttpGetWithEntity(apiUrl);
         httpGet.setConfig(requestConfig);
         if (headers != null && headers.size() > 0) {
             for (Map.Entry<String, String> entry : headers.entrySet()) {
                 httpGet.addHeader(entry.getKey(), entry.getValue());
             }
         }
+        setRequestBody(httpGet, requestParams);
         CloseableHttpResponse response = null;
         try {
             long startTime = System.currentTimeMillis();
@@ -97,58 +105,36 @@ public class HttpClientUtil {
         }
     }
 
+
     public static ResponseEntity doPost(String url) {
-        return doPost(url, Collections.EMPTY_MAP);
+        return doPost(url, new RequestParameterEntity());
     }
 
-    public static ResponseEntity doPost(String url, Map<String, Object> params) {
-        return doPost(url, Collections.EMPTY_MAP, params, new String());
+    public static ResponseEntity doPost(String url, RequestParameterEntity requestParams) {
+        return doPost(url, Collections.EMPTY_MAP, requestParams);
     }
 
-    public static ResponseEntity doPost(String url, Map<String, Object> params, String json) {
-        return doPost(url, Collections.EMPTY_MAP, params, json);
-    }
-
-    public static ResponseEntity doPost(String url, Map<String, String> headers, Map<String, Object> params, String json) {
+    public static ResponseEntity doPost(String url, Map<String, String> headers, RequestParameterEntity requestParams) {
         RequestConfig requestConfig = RequestConfig.custom()
                 .setConnectTimeout(HttpConstant.CONNECT_TIME_OUT)
                 .setSocketTimeout(HttpConstant.SOCKET_TIME_OUT)
                 .build();
-        return doPost(url, headers, params, json, requestConfig);
+        return doPost(url, headers, requestParams, requestConfig);
     }
 
-    public static ResponseEntity doPost(String url, Map<String, String> headers, Map<String, Object> params, String json, RequestConfig requestConfig) {
-        return doPost(url, headers, params, json, new BasicCookieStore(), requestConfig);
+    public static ResponseEntity doPost(String url, Map<String, String> headers, RequestParameterEntity requestParams, RequestConfig requestConfig) {
+        return doPost(url, headers, requestParams, new BasicCookieStore(), requestConfig);
     }
 
-    public static ResponseEntity doPost(String url, Map<String, String> headers, Map<String, Object> params, String json, CookieStore httpCookieStore, RequestConfig requestConfig) {
+    public static ResponseEntity doPost(String url, Map<String, String> headers, RequestParameterEntity requestParams, CookieStore httpCookieStore, RequestConfig requestConfig) {
         CloseableHttpClient httpClient = HttpClients
                 .custom()
                 .setDefaultCookieStore(Optional.ofNullable(httpCookieStore).orElse(httpCookieStore = new BasicCookieStore()))
                 .build();
         HttpPost httpPost;
-        if (!StrUtil.isEmpty(json)) {
-            url = getUrlWithParams(url, params);
-            httpPost = new HttpPost(url);
-            StringEntity jsonContent;
-            try {
-                jsonContent = new StringEntity(json);
-                jsonContent.setContentType("application/json");
-                jsonContent.setContentEncoding(Constant.CHARSET_UTF_8);
-                httpPost.setHeader("Content-Type", "application/json;charset=UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                String exceptionMsg = String.format("unsupported encoding exception :%s", e.getMessage());
-                throw new DefinedException(exceptionMsg);
-            }
-            httpPost.setEntity(jsonContent);
-        } else {
-            httpPost = new HttpPost(url);
-            if (MapUtil.isEmpty(params)) {
-                HttpEntity entityReq = getUrlEncodedFormEntity(params);
-                httpPost.setEntity(entityReq);
-            }
-        }
-
+        url = getUrlWithParams(url, requestParams.getParams());
+        httpPost = new HttpPost(url);
+        setRequestBody(httpPost, requestParams);
         httpPost.setConfig(requestConfig);
         if (headers != null && headers.size() > 0) {
             for (Map.Entry<String, String> entry : headers.entrySet()) {
@@ -181,15 +167,20 @@ public class HttpClientUtil {
     }
 
     public static ResponseEntity doDelete(String url, Map<String, String> headers, RequestConfig requestConfig) {
-        return doDelete(url, headers, new BasicCookieStore(), requestConfig);
+        return doDelete(url, headers, new RequestParameterEntity(), new BasicCookieStore(), requestConfig);
     }
 
-    public static ResponseEntity doDelete(String url, Map<String, String> headers, CookieStore httpCookieStore, RequestConfig requestConfig) {
+    public static ResponseEntity doDelete(String url, Map<String, String> headers, RequestParameterEntity requestParams, RequestConfig requestConfig) {
+        return doDelete(url, headers, requestParams, new BasicCookieStore(), requestConfig);
+    }
+
+    public static ResponseEntity doDelete(String url, Map<String, String> headers, RequestParameterEntity requestParams, CookieStore httpCookieStore, RequestConfig requestConfig) {
         CloseableHttpClient httpClient = HttpClients
                 .custom()
                 .setDefaultCookieStore(Optional.ofNullable(httpCookieStore).orElse(httpCookieStore = new BasicCookieStore()))
                 .build();
-        HttpDelete httpDelete = new HttpDelete(url);
+        url = getUrlWithParams(url, requestParams.getParams());
+        HttpDeleteWithEntity httpDelete = new HttpDeleteWithEntity(url);
         httpDelete.setConfig(requestConfig);
         if (headers != null && headers.size() > 0) {
             for (Map.Entry<String, String> entry : headers.entrySet()) {
@@ -197,6 +188,7 @@ public class HttpClientUtil {
             }
         }
         CloseableHttpResponse response = null;
+        setRequestBody(httpDelete, requestParams);
         try {
             long startTime = System.currentTimeMillis();
             response = httpClient.execute(httpDelete);
@@ -204,56 +196,37 @@ public class HttpClientUtil {
             long elapsedTime = endTime - startTime;
             return wrapperResponseEntity(response, elapsedTime, httpCookieStore);
         } catch (ClientProtocolException e) {
-            throw new DefinedException("client protocol exception: " + e.getMessage());
+            throw new DefinedException("Client protocol exception: " + e.getMessage());
         } catch (ParseException e) {
-            throw new DefinedException("parse exception: " + e.getMessage());
+            throw new DefinedException("Parse exception: " + e.getMessage());
         } catch (IOException e) {
-            throw new DefinedException("io exception: " + e.getMessage());
+            throw new DefinedException("IO exception: " + e.getMessage());
         } finally {
             if (null != response) {
                 try {
                     response.close();
                     httpClient.close();
                 } catch (IOException e) {
-                    MyLog.warn("release connection exception");
+                    MyLog.warn("An exception occurred in releasing the connection object");
                 }
             }
         }
     }
 
 
-    public static ResponseEntity doPut(String url, Map<String, String> headers, Map<String, Object> params, String json, RequestConfig requestConfig) {
-        return doPut(url, headers, params, json, new BasicCookieStore(), requestConfig);
+    public static ResponseEntity doPut(String url, Map<String, String> headers, RequestParameterEntity requestParams, RequestConfig requestConfig) {
+        return doPut(url, headers, requestParams, new BasicCookieStore(), requestConfig);
     }
 
-    public static ResponseEntity doPut(String url, Map<String, String> headers, Map<String, Object> params, String json, CookieStore httpCookieStore, RequestConfig requestConfig) {
+    public static ResponseEntity doPut(String url, Map<String, String> headers, RequestParameterEntity requestParams, CookieStore httpCookieStore, RequestConfig requestConfig) {
         CloseableHttpClient httpClient = HttpClients
                 .custom()
                 .setDefaultCookieStore(Optional.ofNullable(httpCookieStore).orElse(httpCookieStore = new BasicCookieStore()))
                 .build();
         HttpPut httpPut;
-        if (!StrUtil.isEmpty(json)) {
-            url = getUrlWithParams(url, params);
-            httpPut = new HttpPut(url);
-            StringEntity jsonContent;
-            try {
-                jsonContent = new StringEntity(json);
-                jsonContent.setContentType("application/json");
-                jsonContent.setContentEncoding(Constant.CHARSET_UTF_8);
-                httpPut.setHeader("Content-Type", "application/json;charset=UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                String exceptionMsg = String.format("unsupported encoding exception :%s", e.getMessage());
-                throw new DefinedException(exceptionMsg);
-            }
-            httpPut.setEntity(jsonContent);
-        } else {
-            httpPut = new HttpPut(url);
-            if (MapUtil.isEmpty(params)) {
-                HttpEntity entityReq = getUrlEncodedFormEntity(params);
-                httpPut.setEntity(entityReq);
-            }
-        }
-
+        url = getUrlWithParams(url, requestParams.getParams());
+        httpPut = new HttpPut(url);
+        setRequestBody(httpPut, requestParams);
         httpPut.setConfig(requestConfig);
         if (headers != null && headers.size() > 0) {
             for (Map.Entry<String, String> entry : headers.entrySet()) {
@@ -298,12 +271,12 @@ public class HttpClientUtil {
         responseEntity.setStatusCode(statusCode);
         responseEntity.setContentLength(response.getEntity().getContentLength());
         responseEntity.setTime((elapsedTime * 1.0) / 1000);
-        HashMap<String, String> headersMap = new HashMap<>();
+        HashMap<String, Object> headersMap = new HashMap<>();
         Header[] headerArr = response.getAllHeaders();
         for (Header header : headerArr) {
             headersMap.put(header.getName(), header.getValue());
         }
-        HashMap<String, String> cookiesMap = new HashMap<>();
+        HashMap<String, Object> cookiesMap = new HashMap<>();
         if (httpCookieStore != null) {
             List<Cookie> cookies = httpCookieStore.getCookies();
             for (Cookie cookie : cookies) {
@@ -311,7 +284,6 @@ public class HttpClientUtil {
             }
             responseEntity.setCookies(cookiesMap);
         }
-
         responseEntity.setHeaders(headersMap);
         if (statusCode == HttpStatus.SC_OK) {
             HttpEntity entityRes = response.getEntity();
@@ -336,7 +308,7 @@ public class HttpClientUtil {
     private static String getUrlWithParams(String url, Map<String, Object> params) {
         boolean first = true;
         StringBuilder sb = new StringBuilder(url);
-        if (params != null) {
+        if (MapUtil.isNotEmpty(params)) {
             for (String key : params.keySet()) {
                 char ch = '&';
                 if (first == true) {
@@ -345,9 +317,11 @@ public class HttpClientUtil {
                 }
                 String value = params.get(key).toString();
                 try {
-                    String sval = URLEncoder.encode(value, "UTF-8");
-                    sb.append(ch).append(key).append("=").append(sval);
+                    String sVal = URLEncoder.encode(value, Constant.CHARSET_UTF_8);
+                    sb.append(ch).append(key).append("=").append(sVal);
                 } catch (UnsupportedEncodingException e) {
+                    String exceptionMsg = String.format("Parameter %s encoding exception, exception information::%s", value, e.getMessage());
+                    throw new DefinedException(exceptionMsg);
                 }
             }
         }
@@ -361,7 +335,21 @@ public class HttpClientUtil {
                     .getValue().toString());
             pairList.add(pair);
         }
-        return new UrlEncodedFormEntity(pairList, Charset.forName("UTF-8"));
+        return new UrlEncodedFormEntity(pairList, StandardCharsets.UTF_8);
+    }
+
+    private static void setRequestBody(HttpEntityEnclosingRequestBase request, RequestParameterEntity requestParams) {
+        if (Objects.nonNull(requestParams.getData())) {
+            if (requestParams.getData() instanceof JSONObject) {
+                Map<String, Object> dataMap = JSONObject.parseObject(JSON.toJSONString(requestParams.getData()), Map.class);
+                HttpEntity entityReq = getUrlEncodedFormEntity(dataMap);
+                request.setEntity(entityReq);
+            }
+        }
+        if (Objects.nonNull(requestParams.getJson())) {
+            HttpEntity httpEntity = new StringEntity(JSON.toJSONString(requestParams.getJson()), ContentType.APPLICATION_JSON);
+            request.setEntity(httpEntity);
+        }
     }
 
     /**
@@ -416,35 +404,83 @@ public class HttpClientUtil {
         ResponseEntity responseEntity = null;
         String method = requestEntity.getMethod();
         String url = requestEntity.getUrl();
+
         Map<String, String> headers = requestEntity.getHeaders();
-        Map<String, Object> params = requestEntity.getParams();
-        String json = JSON.toJSONString(requestEntity.getJson());
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestUrl"), requestEntity.getUrl()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestMethod"), requestEntity.getMethod()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestHeader"), requestEntity.getHeaders()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestCookie"), requestEntity.getCookies()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestParameter"), requestEntity.getParams()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("requestJson"), requestEntity.getJson()));
+        RequestParameterEntity requestParameterEntity = new RequestParameterEntity();
+        BeanUtil.copyProperties(requestEntity, requestParameterEntity);
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.url"), SmallUtil.emptyIfNull(requestEntity.getUrl())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.method"), SmallUtil.emptyIfNull(requestEntity.getMethod())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.header"), SmallUtil.emptyIfNull(requestEntity.getHeaders())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.cookie"), SmallUtil.emptyIfNull(requestEntity.getCookies())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.parameter"), SmallUtil.emptyIfNull(requestEntity.getParams())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("request.json"), SmallUtil.emptyIfNull(requestEntity.getJson())));
         if (HttpConstant.GET.equalsIgnoreCase(requestEntity.getMethod())) {
-            responseEntity = doGet(url, headers, params, initRequestConfig(requestEntity));
+            responseEntity = doGet(url, headers, requestParameterEntity, initRequestConfig(requestEntity));
         } else if (HttpConstant.POST.equalsIgnoreCase(method)) {
-            responseEntity = doPost(url, headers, params, json, initRequestConfig(requestEntity));
+            responseEntity = doPost(url, headers, requestParameterEntity, initRequestConfig(requestEntity));
         } else if (HttpConstant.DELETE.equalsIgnoreCase(method)) {
-            responseEntity = doDelete(url, headers, initRequestConfig(requestEntity));
+            responseEntity = doDelete(url, headers, requestParameterEntity, initRequestConfig(requestEntity));
         } else if (HttpConstant.PUT.equalsIgnoreCase(method)) {
-            responseEntity = doPut(url, headers, params, json, initRequestConfig(requestEntity));
+            responseEntity = doPut(url, headers, requestParameterEntity, initRequestConfig(requestEntity));
         } else if (HttpConstant.HEAD.equalsIgnoreCase(method)) {
         } else if (HttpConstant.OPTIONS.equalsIgnoreCase(method)) {
         }
         if (Objects.isNull(responseEntity)) {
-            throw new DefinedException("响应信息为空！");
+            throw new DefinedException("The interface response information cannot be empty!");
         }
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("responseStatusCode"), responseEntity.getStatusCode()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("responseBody"), responseEntity.getContent()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("responseTime"), responseEntity.getTime()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("responseHeader"), responseEntity.getHeaders()));
-        MyLog.info(String.format(I18NFactory.getLocaleMessage("responseCookie"), responseEntity.getCookies()));
-
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("response.status.code"), SmallUtil.emptyIfNull(responseEntity.getStatusCode())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("response.body"), SmallUtil.emptyIfNull(responseEntity.getContent())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("response.time"), SmallUtil.emptyIfNull(responseEntity.getTime())));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("response.header"), SmallUtil.emptyIfNull(JSON.toJSONString(responseEntity.getHeaders()))));
+        MyLog.info(String.format(I18NFactory.getLocaleMessage("response.cookie"), SmallUtil.emptyIfNull(responseEntity.getCookies())));
         return responseEntity;
     }
+}
+
+class HttpGetWithEntity extends HttpEntityEnclosingRequestBase {
+    private final static String METHOD_NAME = "GET";
+
+    public HttpGetWithEntity() {
+        super();
+    }
+
+    public HttpGetWithEntity(final URI uri) {
+        super();
+        setURI(uri);
+    }
+
+    HttpGetWithEntity(final String uri) {
+        super();
+        setURI(URI.create(uri));
+    }
+
+    @Override
+    public String getMethod() {
+        return METHOD_NAME;
+    }
+
+}
+
+class HttpDeleteWithEntity extends HttpEntityEnclosingRequestBase {
+    private final static String METHOD_NAME = "DELETE";
+
+    public HttpDeleteWithEntity() {
+        super();
+    }
+
+    public HttpDeleteWithEntity(final URI uri) {
+        super();
+        setURI(uri);
+    }
+
+    HttpDeleteWithEntity(final String uri) {
+        super();
+        setURI(URI.create(uri));
+    }
+
+    @Override
+    public String getMethod() {
+        return METHOD_NAME;
+    }
+
 }
